@startuml

title __MYVIEW's Class Diagram__\n

  namespace com.chrisjaunes.communication.client {
    namespace myView {
      class com.chrisjaunes.communication.client.myView.AvatarCircleView {
          - mBorderColor : int
          - mBorderWidth : float
          - mMatrix : Matrix
          - mPaintBitmap : Paint
          - mPaintBorder : Paint
          - mRawBitmap : Bitmap
          - mShader : BitmapShader
          + AvatarCircleView()
          # onDraw()
          - dip2px()
          - getBitmap()
      }
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    namespace myView {
      class com.chrisjaunes.communication.client.myView.ChatBoxView {
          {static} + borderWidth : int
          {static} + line_space : int
          {static} + padding : int
          {static} + textWidth : int
          {static} + triangleHeight : int
          {static} + triangleWidth : int
          ~ background_color : int
          ~ border_color : int
          ~ signleLineHeight : int
          ~ text_color : int
          - height : int
          - is_left : Boolean
          - paintIn : Paint
          - paintOut : Paint
          - paintText : Paint
          - radius : float
          - text : String
          - text_size : int
          - width : int
          + ChatBoxView()
          + setMyColor()
          + setMyText()
          # onDraw()
          # onMeasure()
          - calcHeight()
          - calcWidth()
          - drawText()
      }
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    namespace myView {
      class com.chrisjaunes.communication.client.myView.ChatTextStyleRaw {
          + border_color : String
          + bubble_color : String
          + font_color : String
          {static} - DEFAULT_BORDER_COLOR : String
          {static} - DEFAULT_BUBBLE_COLOR : String
          {static} - DEFAULT_FONT_COLOR : String
          {static} - STR_BORDER_COLOR : String
          {static} - STR_BUBBLE_COLOR : String
          {static} - STR_FONT_COLOR : String
          + toJson()
          + toString()
          {static} + valueOf()
      }
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    namespace myView {
      class com.chrisjaunes.communication.client.myView.ChatTextStyleRaw.Builder {
          + Builder()
          + addChatBorderColor()
          + addChatBubbleColor()
          + addChatFontColor()
          ~ build()
      }
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    namespace myView {
      class com.chrisjaunes.communication.client.myView.ChatTextStyleHelper {
          - vi_border_color : View
          - vi_bubble_color : View
          - vi_font_color : View
          + ChatTextStyleHelper()
          + getChatTextStyle()
      }
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    namespace myView {
      class com.chrisjaunes.communication.client.myView.ChatTextStyleView {
          {static} + CHAT_TEXT_STYLE_DEFAULT : ChatTextStyleView
          + border_color : int
          + bubble_color : int
          + text_color : int
          {static} + valueOf()
          {static} + valueOf()
      }
    }
  }
  

  namespace com.chrisjaunes.communication.client {
    namespace myView {
      class com.chrisjaunes.communication.client.myView.ChatTextView {
          {static} + borderWidth : int
          {static} + line_space : int
          {static} + padding : int
          {static} + textWidth : int
          {static} + triangleHeight : int
          {static} + triangleWidth : int
          ~ border_color : int
          ~ bubble_color : int
          ~ signleLineHeight : int
          ~ text_color : int
          - height : int
          - is_left : Boolean
          - paintIn : Paint
          - paintOut : Paint
          - paintText : Paint
          - radius : float
          - text : String
          - text_size : int
          - width : int
          + ChatTextView()
          + setMyColor()
          + setMyColor()
          + setMyText()
          # onDraw()
          # onMeasure()
          - calcHeight()
          - calcWidth()
          - drawText()
      }
    }
  }
  

  com.chrisjaunes.communication.client.myView.AvatarCircleView -up-|> androidx.appcompat.widget.AppCompatImageView
  com.chrisjaunes.communication.client.myView.ChatBoxView -up-|> android.view.View
  com.chrisjaunes.communication.client.myView.ChatTextStyleRaw +-down- com.chrisjaunes.communication.client.myView.ChatTextStyleRaw.Builder
  com.chrisjaunes.communication.client.myView.ChatTextStyleRaw.Builder o-- com.chrisjaunes.communication.client.myView.ChatTextStyleRaw : chatTextStyle
  com.chrisjaunes.communication.client.myView.ChatTextView -up-|> android.view.View


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
